Bug 302916 - Print / Export looks extremely ugly for Task View
Summary: Print / Export looks extremely ugly for Task View
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: usability (other bugs)
Version First Reported In: 2.4.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-02 17:37 UTC by kosa.endre
Modified: 2016-09-16 12:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kosa.endre 2012-07-02 17:37:29 UTC
The characters in the exported tables are narrow to the extent that it cripples readability.

Reproducible: Always

Steps to Reproduce:
1. Get to the Task View.
2. Add some tasks.
3. Press the Print Preview button, or create a PDF export.
Actual Results:  
Characters are so narrow that the text is barely readable.

Expected Results:  
Readable text. :-)

I'm using version 2.4.2. Other than this issue, this is a great piece of software!
Comment 1 Dag Andersen 2012-07-04 11:48:42 UTC
Yes, maybe the printout shoud be distrubuted over multiple pages in this case.

There atm two ways to work around:
1) Print to a larger paper size, and/or landscape :)
2) Remove any columns you don't need from the view before printing.
Comment 2 Dag Andersen 2016-09-16 12:57:31 UTC
Git commit 9a6b2ce59d85eda2b7736d4a0c807409d69142b2 by Dag Andersen.
Committed on 16/09/2016 at 12:56.
Pushed by danders into branch 'master'.

Plan: Fix printing treeviews

Todo: Indent tree
FIXED-IN:3.0

M  +120  -19   plan/libs/ui/kptviewbase.cpp
M  +1    -1    plan/libs/ui/kptviewbase.h

http://commits.kde.org/calligra/9a6b2ce59d85eda2b7736d4a0c807409d69142b2