Plan: Fix printing treeviews

Todo: Indent tree

BUG:302916
FIXED-IN:3.0